# ND0013-Self-Driving-Car-Engineer

./: .gitmodules  README.md
.github/PULL_REQUEST_TEMPLATE/: pull_request_template.md
1-Computer-Vision/: README.md
1-Computer-Vision/1-1-Object-Detection-in-Urban-Environments/: 2022-10-11-Setup-and-Training.ipynb  2022-10-16-Report.md  Exploratory Data Analysis.ipynb  README.md  pipeline.config  references.bib  setup.py
1-Computer-Vision/1-1-Object-Detection-in-Urban-Environments/Exploratory-Data-Analysis/: 2022-09-29-Exploratory-Data-Analysis-Part-1.ipynb
1-Computer-Vision/1-1-Object-Detection-in-Urban-Environments/annotations/: label_map.pbtxt
1-Computer-Vision/1-1-Object-Detection-in-Urban-Environments/configs/: config.py  config.yaml
1-Computer-Vision/1-1-Object-Detection-in-Urban-Environments/experiments/: exporter_main_v2.py  model_main_tf2.py  testing_configs.py
1-Computer-Vision/Exercises/1-1-1-Choosing-Metrics/: 2022-07-25-Choosing-Metrics-IoU.ipynb
1-Computer-Vision/Exercises/1-1-2-Data-Acquisition-Visualisation/: 2022-08-01-Data-Acquisition-Visualisation.ipynb
1-Computer-Vision/Exercises/1-1-3-Creating-TF-Records/: 2022-08-03-Creating-TF-Records.ipynb  setup.py
1-Computer-Vision/Exercises/1-2-1-Calibration-Distortion/: references.bib
1-Computer-Vision/Exercises/1-2-2-Image-Manipulation/: 2022-08-17-Image-Manipulation-Masking.ipynb  references.bib
1-Computer-Vision/Exercises/1-2-3-Geometric-Transformations/: 2022-08-23-Geometric-Transformations-Image-Augmentation.ipynb
1-Computer-Vision/Exercises/1-3-1-Logistic-Regression/: 2022-08-27-Logistic-Regression.ipynb
1-Computer-Vision/Exercises/1-3-2-Stochastic-Gradient-Descent/: 2022-08-29-Stochastic-Gradient-Descent.ipynb
1-Computer-Vision/Exercises/1-3-3-Image-Classification-FNNs/: 2022-09-05-Image-Classification-Feed-Forward-Neural-Networks.ipynb
1-Computer-Vision/Exercises/1-4-1-Pooling-Layers-CNNs/: 2022-09-07-Pooling-Layers-Convolutional-Neural-Networks.ipynb
1-Computer-Vision/Exercises/1-4-2-Building-Custom-CNNs/: 2022-09-12-Building-Custom-Convolutional-Neural-Networks.ipynb  references.bib
1-Computer-Vision/Exercises/1-5-1-Non-Maximum-Suppression/: 2022-09-21-Non-Maximum-Suppression.ipynb
1-Computer-Vision/Exercises/1-5-2-Mean-Average-Precision/: references.bib
1-Computer-Vision/Exercises/1-5-3-Learning-Rate-Schedules/: 2022-09-28-Learning-Rate-Schedules.ipynb
1-Computer-Vision/Exercises/1-6-1-Fully-Convolutional-Networks/: 2023-01-23-Fully-Convolutional-Networks.ipynb  references.bib
1-Computer-Vision/Exercises/1-7-1-Scene-Understanding/: 2023-01-26-Scene-Understanding-Part-1.ipynb  2023-01-26-Scene-Understanding-Part-2.ipynb  2023-01-26-Scene-Understanding.ipynb  references.bib
1-Object-Detection-in-Urban-Environments/: README.md
1-Object-Detection-in-Urban-Environments/Exercises/1-1-1-Choosing-Metrics/: 2022-07-25-Choosing-Metrics-IoU.ipynb
1-Object-Detection-in-Urban-Environments/Exercises/1-1-2-Data-Acquisition-Visualisation/: 2022-08-01-Data-Acquisition-Visualisation.ipynb
1-Object-Detection-in-Urban-Environments/Exercises/1-1-3-Creating-TF-Records/: 2022-08-03-Creating-TF-Records.ipynb  references.bib
1-Object-Detection-in-Urban-Environments/Exercises/1-1-Choosing-Metrics/: 2022-07-25-Choosing-Metrics-IoU.ipynb
2-Sensor-Fusion/: README.md
2-Sensor-Fusion/2-1-3D-Object-Detection-with-LiDAR-Data/: 2022-11-06-Project-Writeup.md  README.md  requirements.txt
2-Sensor-Fusion/2-1-3D-Object-Detection-with-LiDAR-Data/student/: association.py  (+3 more)
2-Sensor-Fusion/2-1-Object-Detection-with-Sensor-Fusion/: loop_over_dataset.py
2-Sensor-Fusion/2-2-Multi-Target-Tracking-with-EKF/: 2022-11-21-Project-Writeup.md  README.md  loop_over_dataset.py  references.bib  setup.py
2-Sensor-Fusion/Exercises/: 2022-10-20-Course-2-Sensor-Fusion-Exercises-Part-1.ipynb  2022-11-11-Course-2-Sensor-Fusion-Exercises-Part-2.ipynb  2022-11-17-Course-2-Sensor-Fusion-Exercises-Part-3.ipynb  2023-01-13-Course-2-Sensor-Fusion-Exercises-Part-4.ipynb  README.md  basic_loop.py  references.bib  requirements.txt  setup.py
3-Localization/: README.md
3-Localization/3-1-Markov-Localization/: 2022-11-25-Course-3-Localization-Exercises-Part-1.ipynb  2022-11-25-Course-3-Localization-Exercises-Part-2.ipynb
3-Localization/3-1-Scan-Matching-Localization/: CMakeLists.txt  README.md  c3-main.cpp  helper.cpp  helper.h  helpers.cpp  helpers.h  references.bib
3-Localization/3-3-Scan-Matching/: CMakeLists.txt  README.md  helper.cpp  helper.h  helpers.cpp  helpers.h  helpers_2d.cpp  helpers_2d.h  helpers_3d.cpp  helpers_3d.h  icp1-main.cpp  icp2-main.cpp  ndt-main.cp  ndt-main.cpp  target.pcd
3-Localization/3-4-Utilizing-Scan-Matching/: CMakeLists.txt  README.md  helper.cpp  helper.h  helpers.cpp  helpers.h  map-main.cpp  sm1-main.cpp  sm2-main.cpp
3-Localization/Exercises/: 2022-11-25-Course-3-Localization-Exercises-Part-1.ipynb  2022-11-25-Course-3-Localization-Exercises-Part-2.ipynb
4-Planning/: README.md
4-Planning/4-1-Motion-Planning-Decision-Making/: README.md  references.bib
4-Planning/4-1-Motion-Planning-Decision-Making/project/planner/: .clang-format  CMakeLists.txt  README.md  behavior_planner_FSM.cpp  behavior_planner_FSM.h  cost_functions.cpp  cost_functions.h  cubic_spiral.cpp  integral.h  main.cpp  motion_planner.cpp  motion_planner.h  planning_params.h  plot_utils.cpp  spiral_base.cpp  spiral_base.h  utils.cpp  utils.h  vehicle_dynamic_model.cpp  velocity_profile_generator.cpp  velocity_profile_generator.h
4-Planning/Exercises/: 1_cost.cc  2022-12-14-Course-4-Planning-Exercises-Part-1.ipynb  2022-12-19-Course-4-Planning-Exercises-Part-2.ipynb  2022-12-23-Course-4-Planning-Exercises-Part-3.ipynb
5-Control/: README.md
5-Control/5-1-Control-Trajectory-Tracking/: 2023-01-08-Project-Submission-Q&A.md  README.md  references.bib
5-Control/Exercises/: 2023-01-03-Course-5-Control-Exercises-Part-1.ipynb
5-Control/Exercises/5-3-Model-Predictive-Control/: CMakeLists.txt  helpers.h  main.cc  mpc.cc  mpc.h
5-Control/Exercises/5-3-Model-Predictive-Control/include/: matplotlibcpp.h
(+204 files in other folders)
